add LoadedDocument